dataset1235/2025-2/1379599236/users/4187943595/executions/2277843042_3806002331.log
== RUN (2025-08-20 17:25:34)
-- CODE: 
#Variaveis Arrasei :P
gp = 2,86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
None
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
None
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
None
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
None
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
None
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
None
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:27:28)
-- CODE: 
#Variaveis Arrasei :P
gp = 2,86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv
total = (litros * gp) + troca
totaldeverdade = total * aumento
print(totaldeverdade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:24:26)
-- CODE: 
#Variaveis Arrasei :P
gp = 2,86
troca = 50 
aumento = 1+(34/100)
litros = input()+ gp
total = 
#Codiguinhos :D arrasei dnv

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
File "XXXX", line 6
    total = 
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:27:30)
-- CODE: 
#Variaveis Arrasei :P
gp = 2,86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv
total = (litros * gp) + troca
totaldeverdade = total * aumento
print(totaldeverdade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    total = (litros * gp) + troca
             ~~~~~~~^~~~
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:27:58)
-- CODE: 
#Variaveis Arrasei :P
gp = 2.86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv
total = (litros * gp) + troca
totaldeverdade = total * aumento
print(totaldeverdade)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.9926519999999
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95176000000004
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.85696
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.846708
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
2499.9991400000004
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 17:28:37)
-- CODE: 
#Variaveis Arrasei :P
gp = 2.86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv
total = (litros * gp) + troca
totaldeverdade = total * aumento
print(round(totaldeverdade,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.99
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.86
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.85
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
2500.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 17:27:51)
-- CODE: 
#Variaveis Arrasei :P
gp = 2.86
troca = 50 
aumento = 1+(34/100)
litros = float(input())

#Codiguinhos :D arrasei dnv
total = (litros * gp) + troca
totaldeverdade = total * aumento
print(totaldeverdade)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
238.23
---- correct output:
979.99
---- user output:
979.9926519999999
-- TEST CASE 2:
---- input:
87.4
---- correct output:
401.95
---- user output:
401.95176000000004
-- TEST CASE 3:
---- input:
50.0
---- correct output:
258.62
---- user output:
258.62
-- TEST CASE 4:
---- input:
10.4
---- correct output:
106.86
---- user output:
106.85696
-- TEST CASE 5:
---- input:
148.17
---- correct output:
634.85
---- user output:
634.846708
-- TEST CASE 6:
---- input:
634.85
---- correct output:
2500.0
---- user output:
2499.9991400000004
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
